--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap");
 * {
   box-sizing: border-box;
   padding: 0;
@@ -9,8 +10,9 @@ body {
   height: 100vh;
   width: 100vw;
   background-color: rgba(175, 195, 255, 0.808);
+  font-family: "Roboto", sans-serif;
 }
-body .about {
+body .wrapper-about {
   height: 93%;
   width: 52%;
   position: absolute;
@@ -20,31 +22,49 @@ body .about {
   display: flex;
   flex-wrap: wrap;
   background-color: #fff;
-  border-radius: 10px 0px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
   box-shadow: -30px 0px 30px 20px #e7e7e7;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr;
+  overflow: hidden;
 }
-body .about .test {
-  width: 50%;
+body .wrapper-about .title {
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
-body .about .test h1 {
-  margin-top: 5%;
-  margin-left: 10%;
-  color: black;
-  font-size: 1.8rem;
+body .wrapper-about .imgs {
+  display: flex;
+  align-self: center;
 }
-body .about .test p {
-  padding: 10px;
-  line-height: 25px;
-  letter-spacing: 1px;
-  font-weight: bold;
-  color: #ffd900;
-  margin-left: 10%;
+body .wrapper-about .imgs img {
+  transform: rotate(-15deg) scale(2.5);
+  width: 100%;
 }
-body .about img {
-  width: 50%;
-  height: 220px;
-  margin-top: 10%;
-  border-radius: 50%;
+body .wrapper-about .about {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+body .wrapper-about .about p {
+  width: 80%;
+  font-size: 1.1rem;
+  line-height: 30px;
+}
+body .wrapper-about .contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+body .wrapper-about .test {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 170px;
+  left: 400px;
+  background: radial-gradient(#e66465, #fff);
 }
 body .skills {
   height: 100%;
@@ -53,5 +73,5 @@ body .skills {
   top: 0;
   left: 1%;
   z-index: 1;
-  background-color: #fff;
+  background-color: #f3f3f3;
 }/*# sourceMappingURL=style.css.map */
