--- a/style/style.css
+++ b/style/style.css
@@ -58,14 +58,6 @@ body .wrapper-about .contact {
   align-items: center;
   justify-content: center;
 }
-body .wrapper-about .test {
-  width: 100px;
-  height: 100px;
-  position: absolute;
-  top: 170px;
-  left: 400px;
-  background: radial-gradient(#e66465, #fff);
-}
 body .skills {
   height: 100%;
   width: 50%;
@@ -73,5 +65,32 @@ body .skills {
   top: 0;
   left: 1%;
   z-index: 1;
-  background-color: #f3f3f3;
+  background-color: #fff;
+  opacity: 0.9;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-wrap: wrap;
+}
+body .skills .title-skills {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+body .skills .name-technology {
+  display: flex;
+}
+body .skills .name-technology span {
+  width: 15px;
+  height: 15px;
+  background-color: #d8d8d8;
+  border-radius: 50%;
+  margin-left: 5px;
+}
+body .skills .project {
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }/*# sourceMappingURL=style.css.map */
