--- a/style/style.scss
+++ b/style/style.scss
@@ -56,14 +56,7 @@ body{
             align-items: center;
             justify-content: center;
         }
-        .test{
-            width: 100px;
-            height: 100px;
-            position: absolute;
-            top: 170px;
-            left: 400px;
-            background: radial-gradient(#e66465, #fff);
-        }
+
     }
     .skills{
         height: 100%;
@@ -72,6 +65,35 @@ body{
         top: 0;
         left: 1%;
         z-index: 1;       
-        background-color: rgb(243, 243, 243);
+        background-color: #fff;
+        opacity: .9;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        flex-wrap: wrap;
+        .title-skills{
+            width: 100%;
+            height: 20%;
+            display: flex;
+            justify-content: center;
+            align-self: center;
+        }
+        .name-technology{
+            // height: 100px;
+            // width: 100%;
+            display: flex;
+            span{
+                width: 15px;
+                height: 15px;
+                background-color: rgb(216, 216, 216);
+                border-radius: 50%;
+                margin-left: 5px;
+            }
+        }
+        .project{
+            display: flex;
+            justify-content: center;
+            align-self: center;
+        }
     }
 }
