--- a/style/style.css
+++ b/style/style.css
@@ -9,64 +9,70 @@ body {
   position: relative;
   height: 100vh;
   width: 100vw;
-  background-color: rgba(175, 195, 255, 0.808);
+  background-color: purple;
   font-family: "Roboto", sans-serif;
 }
 body .wrapper-about {
-  height: 93%;
-  width: 52%;
+  height: 90%;
+  width: 50%;
   position: absolute;
-  top: 7%;
-  left: 47%;
+  top: 10%;
+  left: 42%;
   z-index: 2;
   display: flex;
   flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   background-color: #fff;
   border-radius: 10px 10px 0px 0px;
-  box-shadow: -30px 0px 30px 20px #e7e7e7;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 2fr;
-  overflow: hidden;
+  box-shadow: -20px 0px 5px 0px #bebdbd;
 }
 body .wrapper-about .title {
+  height: 30%;
+  width: 100%;
   display: flex;
   justify-content: center;
-  align-self: center;
+  align-items: center;
+  background-color: purple;
+}
+body .wrapper-about .title h1 {
+  color: white;
 }
 body .wrapper-about .imgs {
   display: flex;
   align-self: center;
 }
 body .wrapper-about .imgs img {
-  transform: rotate(-15deg) scale(2.5);
+  transform: rotate(-15deg) scale(1);
   width: 100%;
 }
 body .wrapper-about .about {
+  height: 40%;
   display: flex;
-  align-items: flex-start;
   justify-content: center;
+  align-items: center;
 }
 body .wrapper-about .about p {
-  width: 80%;
+  width: 60%;
   font-size: 1.1rem;
   line-height: 30px;
 }
 body .wrapper-about .contact {
+  height: 30%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 body .skills {
   height: 100%;
-  width: 50%;
+  width: 45%;
   position: absolute;
   top: 0;
-  left: 1%;
+  left: 2%;
   z-index: 1;
   background-color: #fff;
-  opacity: 0.9;
   display: flex;
   justify-content: center;
   align-content: center;
