--- a/style/style.css
+++ b/style/style.css
@@ -9,7 +9,7 @@ body {
   position: relative;
   height: 100vh;
   width: 100vw;
-  background-color: purple;
+  background-color: rgba(128, 0, 128, 0.9);
   font-family: "Roboto", sans-serif;
 }
 body .wrapper-about {
@@ -25,16 +25,16 @@ body .wrapper-about {
   justify-content: center;
   align-items: center;
   background-color: #fff;
-  border-radius: 10px 10px 0px 0px;
-  box-shadow: -20px 0px 5px 0px #bebdbd;
+  overflow-y: scroll;
+  box-shadow: -30px 30px 5px 0px #bebdbd;
 }
 body .wrapper-about .title {
   height: 30%;
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  background-color: purple;
+  align-items: flex-end;
+  background-color: #800080;
 }
 body .wrapper-about .title h1 {
   color: white;
@@ -59,11 +59,14 @@ body .wrapper-about .about p {
   line-height: 30px;
 }
 body .wrapper-about .contact {
+  width: 100%;
   height: 30%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: purple;
+  color: #fff;
 }
 body .skills {
   height: 100%;
@@ -74,7 +77,7 @@ body .skills {
   z-index: 1;
   background-color: #fff;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-content: center;
   flex-wrap: wrap;
 }
@@ -85,18 +88,38 @@ body .skills .title-skills {
   justify-content: center;
   align-self: center;
 }
-body .skills .name-technology {
-  display: flex;
+body .skills .title-skills h1 {
+  color: purple;
+  font-size: 3rem;
 }
-body .skills .name-technology span {
-  width: 15px;
-  height: 15px;
-  background-color: #d8d8d8;
-  border-radius: 50%;
-  margin-left: 5px;
-}
-body .skills .project {
+body .skills .technology {
+  height: 50px;
+  width: 80%;
   display: flex;
+  text-align: center;
+  align-items: center;
+  margin-left: 5%;
+  background-color: gray;
+  overflow: hidden;
+}
+body .skills .technology div {
+  height: 100%;
+  width: 25%;
+  display: flex;
+  align-items: center;
   justify-content: center;
-  align-self: center;
+  color: #fff;
+  font-weight: bold;
+  font-size: 1.1rem;
+}
+body .skills .technology .fas {
+  width: 0;
+  color: #fff;
+  transform: scale(5);
+}
+body .skills .technology div:nth-of-type(1) {
+  background-color: #4646a5;
+}
+body .skills .technology div:nth-of-type(2) {
+  background-color: #e4c40f;
 }/*# sourceMappingURL=style.css.map */
