--- a/style/style.scss
+++ b/style/style.scss
@@ -9,7 +9,7 @@ body{
     position: relative;
     height: 100vh;
     width: 100vw;
-    background-color: purple;
+    background-color: rgba(128, 0, 128, .9);
     font-family: 'Roboto', sans-serif;
     .wrapper-about{
         height: 90%;
@@ -24,15 +24,15 @@ body{
         justify-content: center;
         align-items: center;
         background-color: #fff;
-        border-radius: 10px 10px 0px 0px; 
-        box-shadow: -20px 0px 5px 0px #bebdbd;
+        overflow-y: scroll;
+        box-shadow: -30px 30px 5px 0px #bebdbd;
         .title{
             height: 30%;
             width: 100%;
             display: flex;
             justify-content: center;
-            align-items: center;
-            background-color:purple;
+            align-items: flex-end;
+            background-color:#800080;
             h1{
                 color: white;
             }
@@ -57,11 +57,14 @@ body{
             }
         }
         .contact{
+            width: 100%;
             height: 30%;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            background-color: purple;
+            color: #fff;
         }
 
     }
@@ -74,7 +77,7 @@ body{
         z-index: 1;       
         background-color: #fff;
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
         align-content: center;
         flex-wrap: wrap;
         .title-skills{
@@ -83,23 +86,47 @@ body{
             display: flex;
             justify-content: center;
             align-self: center;
-        }
-        .name-technology{
-            // height: 100px;
-            // width: 100%;
-            display: flex;
-            span{
-                width: 15px;
-                height: 15px;
-                background-color: rgb(216, 216, 216);
-                border-radius: 50%;
-                margin-left: 5px;
+            h1{
+                color: purple;
+                font-size: 3rem;
             }
         }
-        .project{
+
+        .technology{
+            height: 50px;
+            width: 80%;
+            // display: grid;
+            // grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+            // grid-template-rows: 1fr;
             display: flex;
-            justify-content: center;
-            align-self: center;
+            text-align: center;
+            align-items: center;
+            margin-left: 5%;
+            background-color: gray;
+            overflow: hidden;
+            div{
+                height: 100%;
+                width: 25%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: #fff;
+                font-weight: bold;
+                font-size: 1.1rem;
+            }
+            .fas{
+                width: 0;
+                color: #fff;
+                transform: scale(5);
+            }
+            div:nth-of-type(1){
+                background-color: rgb(70, 70, 165);
+            }
+            div:nth-of-type(2){
+                background-color: rgb(228, 196, 15);
+            }
         }
+
+
     }
 }
