--- a/style/style.css
+++ b/style/style.css
@@ -100,26 +100,22 @@ body .skills .technology {
   align-items: center;
   margin-left: 5%;
   background-color: gray;
-  overflow: hidden;
 }
 body .skills .technology div {
   height: 100%;
-  width: 25%;
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   color: #fff;
   font-weight: bold;
   font-size: 1.1rem;
 }
-body .skills .technology .fas {
-  width: 0;
+body .skills .technology div p {
   color: #fff;
-  transform: scale(5);
+  font-weight: bold;
 }
-body .skills .technology div:nth-of-type(1) {
-  background-color: #4646a5;
-}
-body .skills .technology div:nth-of-type(2) {
-  background-color: #e4c40f;
+body .skills .technology div i {
+  color: #fff;
+  transform: scale(4);
 }/*# sourceMappingURL=style.css.map */
