--- a/style/style.css
+++ b/style/style.css
@@ -74,48 +74,51 @@ body .skills {
   position: absolute;
   top: 0;
   left: 2%;
-  z-index: 1;
+  z-index: 0;
   background-color: #fff;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-content: center;
   flex-wrap: wrap;
 }
-body .skills .title-skills {
+body .skills .title_skills {
   width: 100%;
   height: 20%;
   display: flex;
   justify-content: center;
   align-self: center;
 }
-body .skills .title-skills h1 {
-  color: purple;
+body .skills .title_skills h1 {
+  color: #800080;
   font-size: 3rem;
 }
 body .skills .technology {
-  height: 50px;
+  height: auto;
   width: 80%;
-  display: flex;
-  text-align: center;
-  align-items: center;
-  margin-left: 5%;
-  background-color: gray;
 }
-body .skills .technology div {
-  height: 100%;
+body .skills .technology div:nth-of-type(1) {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  color: #fff;
-  font-weight: bold;
-  font-size: 1.1rem;
+  justify-content: space-between;
 }
-body .skills .technology div p {
-  color: #fff;
+body .skills .technology div:nth-of-type(1) p {
   font-weight: bold;
 }
-body .skills .technology div i {
-  color: #fff;
-  transform: scale(4);
+body .skills .technology div:nth-of-type(1) p:nth-of-type(1) {
+  margin-left: 10px;
+}
+body .skills .technology div:nth-of-type(1) p:nth-of-type(2) {
+  margin-right: 10px;
+}
+body .skills .technology div:nth-of-type(2) {
+  height: 10px;
+  width: 100%;
+  background-color: lightgray;
+}
+body .skills .technology div:nth-of-type(2) span {
+  display: block;
+  height: 100%;
+  width: 50%;
+  background-color: #800080;
 }/*# sourceMappingURL=style.css.map */
