--- a/style/style.scss
+++ b/style/style.scss
@@ -74,53 +74,53 @@ body{
         position: absolute;
         top: 0;
         left: 2%;
-        z-index: 1;       
+        z-index: 0;       
         background-color: #fff;
         display: flex;
-        justify-content: flex-start;
+        justify-content: center;
         align-content: center;
         flex-wrap: wrap;
-        .title-skills{
+        .title_skills{
             width: 100%;
             height: 20%;
             display: flex;
             justify-content: center;
             align-self: center;
             h1{
-                color: purple;
+                color: #800080;
                 font-size: 3rem;
             }
         }
 
         .technology{
-            height: 50px;
+            height: auto;
             width: 80%;
-            display: flex;
-            text-align: center;
-            align-items: center;
-            margin-left: 5%;
-            background-color: gray;
-            div{
-                height: 100%;
+            div:nth-of-type(1){
                 width: 100%;
                 display: flex;
                 align-items: center;
-                justify-content: space-around;
-                color: #fff;
-                font-weight: bold;
-                font-size: 1.1rem;
+                justify-content: space-between;
                 p{
-                    color: #fff;
                     font-weight: bold;
                 }
-                i{
-                    color: #fff;
-                    transform: scale(4);
-                }
                 p:nth-of-type(1){
+                    margin-left: 10px;
+                }
+                p:nth-of-type(2){
+                    margin-right: 10px;
                 }
             }
-
+            div:nth-of-type(2){
+                height: 10px;
+                width: 100%;
+                background-color: lightgray;
+                span{
+                    display: block;
+                    height: 100%;
+                    width: 50%;
+                    background-color: #800080;
+                }
+            }
         }
 
 
