--- a/style/style.scss
+++ b/style/style.scss
@@ -7,15 +7,15 @@
 }
 body{
     position: relative;
-    height: 100vh;
+    height: auto;
     width: 100vw;
     background-color: rgba(128, 0, 128, .9);
     font-family: 'Roboto', sans-serif;
     .wrapper-about{
-        height: 90%;
+        height: auto;
         width: 50%;
         position: absolute;
-        top: 10%;
+        top: 50px;
         left: 42%;
         z-index: 2;
         display: flex;
@@ -24,10 +24,9 @@ body{
         justify-content: center;
         align-items: center;
         background-color: #fff;
-        overflow-y: scroll;
-        box-shadow: -30px 30px 5px 0px #bebdbd;
+        box-shadow: -30px 30px 5px 0px #d8d8d8;
         .title{
-            height: 30%;
+            height: 200px;
             width: 100%;
             display: flex;
             justify-content: center;
@@ -37,16 +36,8 @@ body{
                 color: white;
             }
         }
-        .imgs{
-            display: flex;
-            align-self: center;
-            img{
-                transform: rotate(-15deg) scale(1);
-                width: 100%;
-            }
-        }
         .about{
-            height: 40%;
+            height: 400px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -58,7 +49,7 @@ body{
         }
         .contact{
             width: 100%;
-            height: 30%;
+            height: 200px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -66,14 +57,13 @@ body{
             background-color: purple;
             color: #fff;
         }
-
     }
     .skills{
-        height: 100%;
+        height: auto;
         width: 45%;
         position: absolute;
         top: 0;
-        left: 2%;
+        left: 50px;
         z-index: 0;       
         background-color: #fff;
         display: flex;
@@ -81,20 +71,18 @@ body{
         align-content: center;
         flex-wrap: wrap;
         .title_skills{
-            width: 100%;
-            height: 20%;
+            height: 300px;
             display: flex;
-            justify-content: center;
-            align-self: center;
+            align-items: center;
             h1{
                 color: #800080;
                 font-size: 3rem;
             }
         }
-
         .technology{
             height: auto;
             width: 80%;
+            margin-bottom: 30px;
             div:nth-of-type(1){
                 width: 100%;
                 display: flex;
@@ -117,12 +105,34 @@ body{
                 span{
                     display: block;
                     height: 100%;
-                    width: 50%;
                     background-color: #800080;
+                }
+                .mid{
+                    width: 50%;
+                }
+                .junior{
+                    width: 25%;
+                }
+                .trainee{
+                    width: 5%;
                 }
             }
         }
-
+        .project{
+            height: 300px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            button{
+                background-color: #800080;
+                width: 30%;
+                height: 50px;
+                a{
+                    color: #fff;
+                }
+            }
+        }
 
     }
 }
