--- a/style/style.css
+++ b/style/style.css
@@ -6,25 +6,99 @@
 }
 
 body {
+  height: auto;
+  width: 100vw;
+  position: relative;
+  background-color: rgba(128, 0, 128, 0.9);
+  font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
+}
+body .wrapper-about {
+  position: absolute;
+  top: 50px;
+  right: 50px;
+  height: auto;
+  width: 55%;
+  z-index: 1;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  box-shadow: -100px 0px 100px 0px rgba(0, 0, 0, 0.068);
+}
+body .wrapper-about .title {
+  height: 40vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: auto;
-  width: 100vw;
-  background-color: rgba(128, 0, 128, 0.9);
+  background-color: #800080;
+}
+body .wrapper-about .title h1 {
+  color: white;
+  font-size: 3rem;
+  margin-top: 50px;
+  line-height: 80px;
+}
+body .wrapper-about .up {
+  position: relative;
+  width: 100%;
+}
+body .wrapper-about .about {
+  height: 60vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body .wrapper-about .about p {
+  width: 60%;
+  font-size: 1.1rem;
+  line-height: 30px;
+  font-weight: 700;
+}
+body .wrapper-about .down {
+  position: relative;
+  display: block;
+  margin-bottom: -4px;
+  width: 100%;
+}
+body .wrapper-about .contact {
+  height: 30vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: purple;
+  color: #fff;
+}
+body .wrapper-about .contact h1 {
+  margin-bottom: 10px;
+}
+body .wrapper-about .contact p {
+  line-height: 30px;
+  font-weight: 700;
 }
 body .skills {
+  position: relative;
   height: auto;
-  width: 45%;
+  width: 55%;
   z-index: 0;
   background-color: #fff;
   display: flex;
   justify-content: center;
   align-content: center;
   flex-wrap: wrap;
+  box-shadow: 100px 0px 100px 0px rgba(0, 0, 0, 0.459);
+  transition: all 0.3s linear;
+}
+body .skills:hover {
+  z-index: 2;
 }
 body .skills .title_skills {
-  height: 300px;
+  height: 50vh;
   display: flex;
   align-items: center;
 }
@@ -33,7 +107,6 @@ body .skills .title_skills h1 {
   font-size: 3rem;
 }
 body .skills .technology {
-  height: auto;
   width: 80%;
   margin-bottom: 25px;
 }
@@ -72,79 +145,40 @@ body .skills .technology div:nth-of-type(2) .junior {
 body .skills .technology div:nth-of-type(2) .trainee {
   width: 5%;
 }
-body .skills .project {
-  height: 300px;
+body .certificates {
+  height: 70vh;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-body .skills .project button {
-  background-color: #800080;
-  width: 30%;
-  height: 50px;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  box-shadow: -5px -5px 5px 0px #c5c3c3;
-}
-body .skills .project button a {
-  font-size: 1.1rem;
-  color: #fff;
-  font-weight: bold;
-  text-decoration: none;
-}
-body .wrapper-about {
-  height: auto;
-  width: 50%;
-  margin-top: 50px;
-  margin-right: 50px;
-  z-index: 1;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-  box-shadow: -30px 30px 5px 0px #d8d8d8;
-}
-body .wrapper-about .title {
-  height: 200px;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  background-color: #800080;
-}
-body .wrapper-about .title h1 {
-  color: white;
-}
-body .wrapper-about .about {
-  height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-body .wrapper-about .about p {
-  width: 60%;
-  font-size: 1.1rem;
-  line-height: 30px;
-  font-weight: 700;
-}
-body .wrapper-about .contact {
-  width: 100%;
-  height: 200px;
-  display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: purple;
-  color: #fff;
 }
-body .wrapper-about .contact h1 {
-  margin-bottom: 10px;
+body .certificates h2 {
+  color: #800080;
+  font-size: 2rem;
+  margin-bottom: 30px;
 }
-body .wrapper-about .contact p {
-  line-height: 30px;
-  font-weight: 700;
+body .certificates p {
+  line-height: 40px;
+}
+
+@media (max-Width: 1024px) {
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: transparent;
+  }
+  body .wrapper-about {
+    position: relative;
+    width: 100%;
+    z-index: 0;
+    top: 0;
+    left: 0;
+    box-shadow: none;
+  }
+  body .skills {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
