--- a/style/style.scss
+++ b/style/style.scss
@@ -6,25 +6,97 @@
     margin: 0;
 }
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: auto;
     width: 100vw;
+    position: relative;
     background-color: rgba(128, 0, 128, .9);
-    // font-family: 'Roboto', sans-serif;
-
-    .skills{
+    font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
+    .wrapper-about{
+        position: absolute;
+        top: 50px;
+        right: 50px;
         height: auto;
-        width: 45%;
+        width: 55%;
+        z-index: 1;
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background-color: #fff;
+        box-shadow: -100px 0px 100px 0px rgba(0, 0, 0, 0.068);
+        .title{
+            height: 40vh;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color:#800080;
+            h1{
+                color: white;
+                font-size: 3rem;
+                margin-top: 50px;
+                line-height: 80px;
+            }
+        }
+        .up{
+            position: relative;
+            width: 100%;
+        }
+        .about{
+            height: 60vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            p{
+                width: 60%;
+                font-size: 1.1rem;
+                line-height: 30px;
+                font-weight: 700;
+            }
+        }
+        .down{
+            position: relative;
+            display: block;
+            margin-bottom: -4px;
+            width: 100%;
+        }
+        .contact{
+            height: 30vh;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: purple;
+            color: #fff;
+            h1{
+                margin-bottom: 10px;
+            }
+            p{
+                line-height: 30px;
+                font-weight: 700;
+            }
+        }
+    }
+    .skills{
+        position: relative;
+        height: auto;
+        width: 55%;
         z-index: 0;       
         background-color: #fff;
         display: flex;
         justify-content: center;
         align-content: center;
         flex-wrap: wrap;
+        box-shadow: 100px 0px 100px 0px rgba(0, 0, 0, 0.459);
+        transition: all .3s linear;
+        &:hover{
+            z-index: 2;
+        }
         .title_skills{
-            height: 300px;
+            height: 50vh;
             display: flex;
             align-items: center;
             h1{
@@ -33,7 +105,6 @@ body{
             }
         }
         .technology{
-            height: auto;
             width: 80%;
             margin-bottom: 25px;
             div:nth-of-type(1){
@@ -72,83 +143,42 @@ body{
                 }
             }
         }
-        .project{
-            height: 300px;
+        }
+        .certificates{
+            height: 70vh;
             width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            button{
-                background-color: #800080;
-                width: 30%;
-                height: 50px;
-                border: none;
-                border-radius: 10px;
-                cursor: pointer;
-                box-shadow: -5px -5px 5px 0px #c5c3c3;
-                a{
-                    font-size: 1.1rem;
-                    color: #fff;
-                    font-weight: bold;
-                    text-decoration: none;
-                }
+            flex-direction: column;
+            h2{
+                color: #800080;
+                font-size: 2rem;
+                margin-bottom: 30px;
+            }
+            p{
+                line-height: 40px;
             }
         }
+}
 
-    }
-    
-    .wrapper-about{
-        height: auto;
-        width: 50%;
-        margin-top: 50px;
-        margin-right: 50px;
-        z-index: 1;
+@media (max-Width: 1024px) {
+    body{
         display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
         justify-content: center;
         align-items: center;
-        background-color: #fff;
-        box-shadow: -30px 30px 5px 0px #d8d8d8;
-        .title{
-            height: 200px;
+        flex-wrap: wrap;
+        background-color: transparent;
+        .wrapper-about{
+            position: relative;
             width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: flex-end;
-            background-color:#800080;
-            h1{
-                color: white;
-            }
+            z-index: 0;
+            top: 0;
+            left: 0;
+            box-shadow: none;
         }
-        .about{
-            height: 400px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            p{
-                width: 60%;
-                font-size: 1.1rem;
-                line-height: 30px;
-                font-weight: 700;
-            }
-        }
-        .contact{
+        .skills{
             width: 100%;
-            height: 200px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: purple;
-            color: #fff;
-            h1{
-                margin-bottom: 10px;
-            }
-            p{
-                line-height: 30px;
-                font-weight: 700;
-            }
         }
     }
 }
