--- a/style/style.scss
+++ b/style/style.scss
@@ -14,9 +14,8 @@ body{
     overflow-x: hidden;
     .wrapper-about{
         position: absolute;
-        top: 50px;
-        right: 50px;
-        height: auto;
+        top: 100px;
+        right: 100px;
         width: 55%;
         z-index: 1;
         display: flex;
@@ -25,62 +24,40 @@ body{
         justify-content: center;
         align-items: center;
         background-color: #fff;
-        box-shadow: -100px 0px 100px 0px rgba(0, 0, 0, 0.068);
-        .title{
-            height: 40vh;
+        box-shadow: -100px 50px 100px 0px rgba(0, 0, 0, 0.11);    
+        .name{
             width: 100%;
+            height: 300px;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color:#800080;
-            h1{
-                color: white;
-                font-size: 3rem;
+            color: #fff;
+            font-size: 3rem;
+            background-color: purple;
+        }
+        svg{
+            width: 100%;
+        }
+        .about_content{
+            width: 100%;
+            height: 600px;
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+            h2{
+                color: #800080;
                 margin-top: 50px;
-                line-height: 80px;
+                font-size: 2rem;
             }
-        }
-        .up{
-            position: relative;
-            width: 100%;
-        }
-        .about{
-            height: 60vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             p{
                 width: 60%;
-                font-size: 1.1rem;
-                line-height: 30px;
-                font-weight: 700;
-            }
-        }
-        .down{
-            position: relative;
-            display: block;
-            margin-bottom: -4px;
-            width: 100%;
-        }
-        .contact{
-            height: 30vh;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-color: purple;
-            color: #fff;
-            h1{
-                margin-bottom: 10px;
-            }
-            p{
-                line-height: 30px;
-                font-weight: 700;
+                margin-top: 50px;
+                line-height: 40px;
+                letter-spacing: .3px;
             }
         }
     }
-    .skills{
+    .wrapper_skills{
         position: relative;
         height: auto;
         width: 55%;
@@ -90,19 +67,19 @@ body{
         justify-content: center;
         align-content: center;
         flex-wrap: wrap;
-        box-shadow: 100px 0px 100px 0px rgba(0, 0, 0, 0.459);
         transition: all .3s linear;
         &:hover{
+            box-shadow: 100px 0px 100px 0px rgba(0, 0, 0, 0.459);
             z-index: 2;
         }
-        .title_skills{
-            height: 50vh;
+        h1{
+            height: 400px;
+            width: 100%;
             display: flex;
             align-items: center;
-            h1{
-                color: #800080;
-                font-size: 3rem;
-            }
+            justify-content: center;
+            font-size: 3rem;
+            color: #800080;
         }
         .technology{
             width: 80%;
@@ -143,9 +120,8 @@ body{
                 }
             }
         }
-        }
         .certificates{
-            height: 70vh;
+            height: 500px;
             width: 100%;
             display: flex;
             justify-content: center;
@@ -160,7 +136,45 @@ body{
                 line-height: 40px;
             }
         }
+    }
+    .wrapper_project{
+        width: 70%;
+        position: absolute;
+        top: 1150px;
+        left: 20%;
+        background-color: #fff;
+        transition: box-shadow .3s linear;
+        &:hover{
+            z-index: 3;
+            box-shadow: -50px -50px 100px 0px rgba(0, 0, 0, 0.137);
+        }
+        h1{
+            height: 300px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #800080;
+            font-size: 3rem;
+        }
+        .project{
+            width: 100%;
+            height: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: row;
+            flex-wrap: wrap;
+            img{
+                width: 45%;
+                margin: 20px;
+            }
+        }
+    }
 }
+
+
+
 
 @media (max-Width: 1024px) {
     body{
