--- a/style/style.scss
+++ b/style/style.scss
@@ -8,81 +8,67 @@
 body{
     height: auto;
     width: 100vw;
-    position: relative;
-    background-color: rgba(128, 0, 128, .9);
-    font-family: 'Roboto', sans-serif;
+    background-color: transparent;
     overflow-x: hidden;
-    .wrapper-about{
-        position: absolute;
-        top: 100px;
-        right: 100px;
-        width: 55%;
-        z-index: 1;
+    font-family: 'Roboto', sans-serif;
+    .name{
+        width: 100%;
+        height: 300px;
         display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
+        justify-content: center;
+        align-items: flex-end;
+        color: #fff;
+        font-size: 3rem;
+        line-height: 80px;
+        background-color: purple;
+    
+    }
+    .up{
+            width: 100%;
+    }
+    .fa-angle-down{
+        margin-top: -100px;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        color: #800080;
+        font-size: 6rem;
+    }
+    .about_content{
+        width: 100%;
+        height: 500px;
+        display: flex;
         justify-content: center;
         align-items: center;
-        background-color: #fff;
-        box-shadow: -100px 50px 100px 0px rgba(0, 0, 0, 0.11);    
-        .name{
-            width: 100%;
-            height: 300px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            font-size: 3rem;
-            background-color: purple;
+        flex-direction: column;
+        h2{
+            color: #800080;
+            font-size: 2rem;
         }
-        svg{
-            width: 100%;
-        }
-        .about_content{
-            width: 100%;
-            height: 600px;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            h2{
-                color: #800080;
-                margin-top: 50px;
-                font-size: 2rem;
-            }
-            p{
-                width: 60%;
-                margin-top: 50px;
-                line-height: 40px;
-                letter-spacing: .3px;
-            }
+        p{
+            width: 40%;
+            margin-top: 50px;
+            line-height: 40px;
+            letter-spacing: .3px;
         }
     }
-    .wrapper_skills{
-        position: relative;
+    .programming_language{
         height: auto;
-        width: 55%;
-        z-index: 0;       
-        background-color: #fff;
+        width: 100%;
         display: flex;
         justify-content: center;
-        align-content: center;
+        align-items: center;
         flex-wrap: wrap;
-        transition: all .3s linear;
-        &:hover{
-            box-shadow: 100px 0px 100px 0px rgba(0, 0, 0, 0.459);
-            z-index: 2;
-        }
-        h1{
-            height: 400px;
+        h2{
             width: 100%;
+            height: 200px;
             display: flex;
-            align-items: center;
             justify-content: center;
-            font-size: 3rem;
+            align-items: center; 
             color: #800080;
         }
         .technology{
-            width: 80%;
+            width: 60%;
             margin-bottom: 25px;
             div:nth-of-type(1){
                 width: 100%;
@@ -120,41 +106,85 @@ body{
                 }
             }
         }
-        .certificates{
-            height: 500px;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            h2{
-                color: #800080;
-                font-size: 2rem;
-                margin-bottom: 30px;
-            }
-            p{
-                line-height: 40px;
-            }
+    }
+    .tools{
+        margin-top: 50px;
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        h2{
+            height: 40px;
+            color: #800080;
+        }
+        p{
+            line-height: 30px;
         }
     }
+    .system{
+        margin-top: 20px;
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column; 
+        h2{
+            height: 50px;
+            color: #800080;
+        }
+    }
+    .language{
+        margin-top: 20px;
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        h2{
+            height: 40px;
+            color: #800080;
+        }
+        p{
+            line-height: 30px;
+        }
+    }
+    .certificates{
+        height: 250px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        h2{
+            color: #800080;
+            font-size: 2rem;
+            margin-bottom: 30px;
+        }
+        p{
+            line-height: 40px;
+        }
+    }
+    .down{
+        margin-bottom: -5px;
+        width: 100%;
+    }
     .wrapper_project{
-        width: 70%;
-        position: absolute;
+        width: 100%;
         top: 1150px;
         left: 20%;
-        background-color: #fff;
-        transition: box-shadow .3s linear;
-        &:hover{
-            z-index: 3;
-            box-shadow: -50px -50px 100px 0px rgba(0, 0, 0, 0.137);
-        }
+        background-color: #800080;
         h1{
-            height: 300px;
+            height: 400px;
             width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
-            color: #800080;
+            color: #fff;
+            background-color: #800080;
             font-size: 3rem;
         }
         .project{
@@ -171,28 +201,26 @@ body{
             }
         }
     }
-}
-
-
-
-
-@media (max-Width: 1024px) {
-    body{
+    .contact{
+        height: 600px;
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-wrap: wrap;
-        background-color: transparent;
-        .wrapper-about{
-            position: relative;
-            width: 100%;
-            z-index: 0;
-            top: 0;
-            left: 0;
-            box-shadow: none;
+        flex-direction: column;
+        h2{
+            font-size: 2rem;
+            color: #800080;
+            margin-bottom: 30px;
         }
-        .skills{
-            width: 100%;
+        p{
+            line-height: 30px; 
+        }
+        .fa-brands,
+        .fa-solid{
+            color: #800080;
+            font-size: 1.4rem;
         }
     }
 }
+
