--- a/style/style.scss
+++ b/style/style.scss
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    scroll-behavior: smooth;
 }
 body{
     height: auto;
@@ -11,6 +12,31 @@ body{
     background-color: transparent;
     overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
+    nav{
+        height: 100%;
+        width: 15%;
+        position: fixed;
+        top: 0;
+        right: 0;
+        background-color: #800080;
+        ul{
+            height: 20%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            i{
+                transform: scale(1.5);
+                color: #fff;
+            }
+            a{
+                margin-left: 10px;
+                font-size: 1.2rem;
+                color: #fff;
+                list-style: none;
+                text-decoration: none;
+            }
+        }
+    }
     .name{
         width: 100%;
         height: 300px;
@@ -43,7 +69,7 @@ body{
         flex-direction: column;
         h2{
             color: #800080;
-            font-size: 2rem;
+            font-size: 2.2rem;
         }
         p{
             width: 40%;
@@ -60,6 +86,7 @@ body{
         align-items: center;
         flex-wrap: wrap;
         h2{
+            font-size: 2.2rem;
             width: 100%;
             height: 200px;
             display: flex;
@@ -173,9 +200,13 @@ body{
         width: 100%;
     }
     .wrapper_project{
-        width: 100%;
+        width: 90%;
         top: 1150px;
         left: 20%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
         background-color: #800080;
         h1{
             height: 400px;
@@ -188,16 +219,41 @@ body{
             font-size: 3rem;
         }
         .project{
-            width: 100%;
+            width: 40%;
             height: auto;
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: row;
-            flex-wrap: wrap;
+            flex-direction: column;
+            .info{
+                width: 80%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                background-color: #fff;
+                h3{
+                    font-size: 1.8rem;
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                }
+                p{
+                    margin-bottom: 10px;
+                    font-weight: bold;
+                }
+                button{
+                    height: 20px;
+                    width: 100px;
+                    margin-bottom: 10px;
+                    font-weight: bold;
+                    border: none;
+                    color: #fff;
+                    background-color: deeppink;
+                    cursor: pointer;
+                }
+            }
             img{
-                width: 45%;
-                margin: 20px;
+                width: 80%;
             }
         }
     }
@@ -209,17 +265,24 @@ body{
         align-items: center;
         flex-direction: column;
         h2{
-            font-size: 2rem;
+            font-size: 2.2rem;
             color: #800080;
-            margin-bottom: 30px;
+            margin-bottom: 50px;
         }
-        p{
-            line-height: 30px; 
-        }
-        .fa-brands,
-        .fa-solid{
-            color: #800080;
-            font-size: 1.4rem;
+        ul{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 15px;
+            i{
+                color: #800080;
+            }
+            li{
+                font-weight: bold;
+                list-style: none;
+                margin-left: 10px;
+                color: #800080;
+            }
         }
     }
 }
