--- a/style/style.scss
+++ b/style/style.scss
@@ -13,14 +13,19 @@ body{
     overflow-x: hidden;
     font-family: 'Roboto', sans-serif;
     nav{
-        height: 100%;
-        width: 15%;
+        height: 80px;
+        width: 100%;
         position: fixed;
         top: 0;
-        right: 0;
+        left: 0;
+        display: flex;
+        justify-content: space-around;
+        align-content: center;
         background-color: #800080;
+        .fa-bars{
+            display: none;
+        }
         ul{
-            height: 20%;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -200,7 +205,7 @@ body{
         width: 100%;
     }
     .wrapper_project{
-        width: 90%;
+        width: 100%;
         top: 1150px;
         left: 20%;
         display: flex;
@@ -219,12 +224,20 @@ body{
             font-size: 3rem;
         }
         .project{
+            height: 300px;
             width: 40%;
             height: auto;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
+            background-color: #fff;
+            margin: 20px;
+            border-radius: 20px;
+            }
+            img{
+                width: 100%;
+            }
             .info{
                 width: 80%;
                 display: flex;
@@ -235,7 +248,8 @@ body{
                 h3{
                     font-size: 1.8rem;
                     margin-top: 20px;
-                    margin-bottom: 20px;
+                    margin-bottom: 10px;
+                    color: #800080;
                 }
                 p{
                     margin-bottom: 10px;
@@ -251,10 +265,7 @@ body{
                     background-color: deeppink;
                     cursor: pointer;
                 }
-            }
-            img{
-                width: 80%;
-            }
+
         }
     }
     .contact{
@@ -287,3 +298,33 @@ body{
     }
 }
 
+@media (max-width: 768px) {
+    body{
+        nav{
+            .fa-bars{
+                color: #fff;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-left: 75%;
+                transform: scale(2);
+            }
+            ul{
+                display: none;
+            }
+        }
+        .active{
+            flex-direction: column;
+            width: 50vw;
+            height: 100vh;
+        }
+        .ul_active{
+            display: flex;
+        }
+        .wrapper_project{
+            .project{
+                width: 70%;
+            }
+        }
+    }
+}
